# photonfactory

./: BasicShader.cc  CMakeLists.txt  Light.h  Makefile  Matrix4x4.h  Plane.cc  Pngexp.cc  README.md  Ray.h  Raytracer.cc  SConstruct  Scene.cc  Scene.h  Shader.h  Sphere.h  SurfacePoint.cc  SurfacePoint.h  Triangle2d.h  YafImport.cc  compile.txt  config.h  main.cc
scenes/: opice.xml  scene1.xml  scene11.xml  scene16.xml  scene4.xml
src/: BasicShader.cc  BasicShader.h  Camera.cc  Camera.h  Color.cc  Color.h  ColorRGB.cc  ColorRGB.h  ColorRGBA.h  Image.h  Image2d.h  Light.h  Matrix4x4.cc  Matrix4x4.h  Object3d.h  Plane.cc  Plane.h  PngWriter.cc  PngWriter.h  Pngexp.cc  Pngexp.h  Point2d.h  Point3d.h  Ray.h  Raytracer.cc  Raytracer.h  Scene.cc  Scene.h  Screen.cc  Screen.h  Shader.h  Sphere.cc  Sphere.h  Triangle.cc  Triangle.h  Triangle2d.cc  Vector2d.h  Vector3d.h  YafImport.h  auxiliary.h  (+2 more)
test/: runUnitTests.cc
